fix: the button for copying code overlaps with the code

--- a/src/previewTheme/themes/arknights/index.scss
+++ b/src/previewTheme/themes/arknights/index.scss
@@ -173,7 +173,7 @@ $bg-color: rgba(224, 224, 224, 0.1);
     code {
       line-height: 1.75;
       font-size: 14px;
-      padding: 15px 12px;
+      padding: 26px 12px;
       overflow-x: auto;
       margin: 0;
       word-break: normal;
@@ -408,5 +408,11 @@ $bg-color: rgba(224, 224, 224, 0.1);
     h3 {
       font-size: 18px;
     }
+  }
+}
+
+[class*='arknights-theme #{$prefix}-scrn'] {
+  span[rn-wrapper] {
+    top: 26px;
   }
 }
